Correct handling of nested datatypes
This corrects the failing tests on nested datatypes that had too many or
too few parameters.  We now recursively clean the input data to the
decorated dataclass.

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,7 +44,7 @@ disallow_untyped_defs = false
 branch = True
 source = tests
 source_pkgs =
-    dclearning
+    softboiled
 
 [coverage:report]
 exclude_lines =
