--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
-name = dclearning
-version = 0.0.0
-description = Learning dataclasses
+name = softboiled
+version = 1.0.0
+description = Making overly flexible dataclasses
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/Preocts/dataclasslearning.git
+url = https://github.com/Preocts/softboiled
 author = Preocts
 author_email = preocts@preocts.com
 license = MIT
