--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,13 +4,11 @@
 #
 #    pip-compile --output-file=requirements-dev.txt requirements-dev.in
 #
-appdirs==1.4.4
-    # via black
 attrs==21.2.0
     # via pytest
 backports.entry-points-selectable==1.1.0
     # via virtualenv
-black==21.7b0
+black==21.9b0
     # via -r requirements-dev.in
 cfgv==3.3.1
     # via pre-commit
@@ -26,7 +24,7 @@ filelock==3.0.12
     #   virtualenv
 flake8==3.9.2
     # via -r requirements-dev.in
-identify==2.2.13
+identify==2.2.14
     # via pre-commit
 iniconfig==1.1.1
     # via pytest
@@ -46,13 +44,15 @@ packaging==21.0
     #   tox
 pathspec==0.9.0
     # via black
-platformdirs==2.2.0
-    # via virtualenv
-pluggy==0.13.1
+platformdirs==2.3.0
+    # via
+    #   black
+    #   virtualenv
+pluggy==1.0.0
     # via
     #   pytest
     #   tox
-pre-commit==2.14.0
+pre-commit==2.15.0
     # via -r requirements-dev.in
 py==1.10.0
     # via
@@ -64,11 +64,11 @@ pyflakes==2.3.1
     # via flake8
 pyparsing==2.4.7
     # via packaging
-pytest==6.2.4
+pytest==6.2.5
     # via -r requirements-dev.in
 pyyaml==5.4.1
     # via pre-commit
-regex==2021.8.27
+regex==2021.8.28
     # via black
 six==1.16.0
     # via
@@ -82,11 +82,13 @@ toml==0.10.2
     #   tox
 tomli==1.2.1
     # via black
-tox==3.24.3
+tox==3.24.4
     # via -r requirements-dev.in
-typing-extensions==3.10.0.0
-    # via mypy
-virtualenv==20.7.2
+typing-extensions==3.10.0.2
+    # via
+    #   black
+    #   mypy
+virtualenv==20.8.0
     # via
     #   pre-commit
     #   tox
